<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_articles"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/articles"/>
        <item
            android:id="@+id/nav_therapists"
            android:icon="@drawable/ic_psychology"
            android:title="Find Therapist" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/profile"/>
    </group>

    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>